--- a/index.html
+++ b/index.html
@@ -18,9 +18,20 @@
 
     </script>
     <style>
+        body{
+            background-color: rgb(208, 192, 211);
+        }
         section{
             width: 400px;
-            background-color: cornflowerblue;
+            background-color: white;
+            text-align: center;
+            padding: 15px;
+            margin: auto;
+            margin-top: 30vh;
+            border: 1px solid;
+        }
+        #resultado{
+            margin: 20px;
         }
     </style>
 </head>
